src/assets/stylesheets/index.scss
/* ... */
.nav-bordered {
  background: #fff;
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: block;
  overflow: hidden;
  width: 100%;
}

.nav-bordered li:first-child {
  border: 0px;
}
.nav-bordered li,
.nav-bordered li .nav-bordered li {
  position: relative;
  display: block;
  margin: 0;
  padding: 0;
  border-top: 1px solid var(--border);
}

.nav-bordered li a {
  font-size: 14px;
  padding: 8px 15px;
  margin: 0;
  color: var(--bs-nav-link-color) !important;
  display: flex;
}

.nav-bordered li .dropdown-toggle.nav-link {
  margin: auto 5px auto -10px;
  &::after {
    font-size: 12px;
    transform: rotate(-90deg);
  }
  &.show::after {
    transform: rotate(0deg);
  }
}

.nav-bordered li li .dropdown-toggle.nav-link {
  margin: auto 5px auto -5px;
}

.nav-bordered li a:hover + .dropdown-toggle.nav-link,
.nav-bordered li.active > .dropdown-toggle.nav-link {
  color: #fff;
}

.nav-bordered li.active > a {
  background: var(--bs-primary);
  color: #fff !important;
}

.nav-bordered li.active:has(li.active) > a:not(:hover) {
  background: inherit;
  color: inherit !important;
}

.nav-bordered li a:hover,
.nav-bordered li a:active {
  background: var(--bs-primary-lighten);
  text-decoration: none !important;
  color: #fff !important;
}

.nav-bordered li a .bi {
  font-size: 1.2rem;
  margin: auto 8px auto 0;
  display: flex;
  flex-grow: 0;
}
.nav-bordered li a span {
  line-height: 1.5;
}

.nav-bordered li ul {
  background: rgba(0, 0, 188, 0.04);
  margin: 0;
  padding: 0;
}

.nav-bordered li ul a {
  font-size: 12px;
  padding: 5px 10px 5px 25px;
  margin: 0;
  display: flex;
  .bi {
    font-size: 12px;
  }
}
.nav-bordered li ul ul a {
  padding: 5px 10px 5px 40px;
}
.navbar-toggler.collapsed .bi-list:before {
  content: '\f479';
}

.navbar-toggler .bi-list:before {
  content: '\f659';
}
@media (min-width: 992px) and (max-width: 1199px) {
  .nav-bordered li a .bi {
    display: none;
  }
}

/* single dropdown
 =================================================================== */

.navbar-single {
  .nav-item {
    margin-top: 10px;
    position: relative;
    display: inline-block;
    .nav-link {
      padding: 5px 10px;
      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
      border-radius: 5px;
    }
  }
  .dropdown-menu {
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    overflow: hidden;
  }

  .text-center .dropdown-menu {
    right: 50% !important;
    left: 50% !important;
    transform: translate3d(-50%, 40px, 0px) !important;
  }

  .text-end .dropdown-menu {
    right: 0 !important;
    left: auto !important;
  }
}

/* .nav-pills
 =================================================================== */

.nav-pills {
  --bs-nav-pills-border-radius: 0;
  --bs-nav-pills-link-active-color: #fff;
  --bs-nav-pills-link-active-bg: var(--bs-primary);
}
.nav-pills .nav-link {
  padding: 4px 8px;
}
.nav-pills .nav-link.active {
  border: 1px solid #fff;
}

/* list details
 =================================================================== */

.list-label {
  text-transform: uppercase;
  font-weight: var(--bs-body-font-weight);
  font-size: 0.65rem;
  display: block;
  opacity: 0.6;
}
.list-value {
  display: block;
  margin: 0;
}

/* breadcrumb
 =================================================================== */

.breadcrumb-item {
  color: var(--headline);
  font-family: var(--jr-headline-font-family), sans-serif;
  font-weight: var(--jr-headline-font-weight);
  font-size: 14px;

  &.active {
    color: var(--bs-primary);
  }
}

.breadcrumb-item + .breadcrumb-item::before {
  font-family: bootstrap-icons !important;
  content: '\f285';
}

/* contrast mode - CSS for more contrast
 =================================================================== */
@media (prefers-contrast: more) {
  :root {
    --light-grey: #eee;
    --middle-grey: #e3e3e3;
  }
  main {
    background: var(--light-grey);
  }
  .Toastify__toast,
  .navbar-toggler.btn,
  .form-control,
  .form-select,
  .card,
  .editor-img,
  .box-comment .avatar img,
  .box-attachment {
    border: 1px solid #777;
  }
  .form-control.drag-active,
  .form-control:focus {
    border: 1px solid var(--bs-primary);
  }

  footer {
    border-top: 1px solid #777;
  }
  .text-muted {
    opacity: 0.9;
  }

  .btn-outline-secondary {
    --bs-btn-color: var(--bs-secondary-darken);
    --bs-btn-border-color: var(--bs-secondary-darken);
  }

  .box-comment .card {
    position: relative;
    overflow: visible;

    &:after,
    &:before {
      right: 100%;
      top: 20px;
      border: solid transparent;
      content: '';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
    }

    &:after {
      border-color: rgba(255, 255, 255, 0);
      border-right-color: #fff;
      border-width: 10px;
      margin-top: -10px;
    }
    &:before {
      border-color: rgba(119, 119, 119, 0);
      border-right-color: #777;
      border-width: 11px;
      margin-top: -11px;
    }
  }

  .box-comment.staff .card,
  .box-comment.colleague .card {
    position: relative;
    overflow: visible;

    &:after,
    &:before {
      left: 100%;
      top: 20px;
      border: solid transparent;
      content: '';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
    }

    &:after {
      border-color: rgba(255, 255, 255, 0);
      border-left-color: #fff;
      border-width: 10px;
      margin-top: -10px;
    }
    &:before {
      border-color: rgba(119, 119, 119, 0);
      border-left-color: #777;
      border-width: 11px;
      margin-top: -11px;
    }
  }
}

